@@ -50,7 +50,7 @@ jobs:
 
 install:
   - pip install -U pip
-  - pip install pylint ruff pycodestyle pyfakefs keyring
+  - pip install pylint ruff flake8 pyfakefs keyring
   - pip install pyqt6 dbus-python
   # add ssh public / private key pair to ensure user can start ssh session to localhost for tests
   - ssh-keygen -b 2048 -t rsa -f /home/travis/.ssh/id_rsa -N ""
