@@ -151,8 +151,8 @@ the packages provided by the official repository of your GNU/Linux distribution.
   - `python3-pyfakefs`
   - Optional but recommended:
     - `pylint` (>= 3.3.0)
-    - `pycodestyle`
-    - `ruff` (>= 0.6.6)
+    - `flake8`
+    - `ruff` (>= 0.6.0)
     - `codespell`
  
 * Dependencies to build documentation
