@@ -371,12 +371,13 @@ class Config(configfile.ConfigFileWithProfiles):
     def host(self):
         return socket.gethostname()
 
-    def get_snapshots_mountpoint(self, profile_id=None, tmp_mount=False):
+    def get_snapshots_mountpoint(self, profile_id=None, mode=None, tmp_mount=False):
         """Return the profiles snapshot path in form of a mount point."""
         if profile_id is None:
             profile_id = self.currentProfile()
 
-        mode = self.snapshotsMode(profile_id)
+        if mode is None:
+            mode = self.snapshotsMode(profile_id)
 
         if mode == 'local':
             return self.get_snapshots_path(profile_id)
@@ -395,7 +396,9 @@ class Config(configfile.ConfigFileWithProfiles):
         That method is a surrogate for `self.get_snapshots_mountpoint()`.
         """
         return self.get_snapshots_mountpoint(
-            profile_id=profile_id, tmp_mount=tmp_mount)
+            profile_id=profile_id,
+            mode=mode,
+            tmp_mount=tmp_mount)
 
     def snapshotsFullPath(self, profile_id = None):
         """
@@ -1682,8 +1685,3 @@ class Config(configfile.ConfigFileWithProfiles):
             cmd = tools.which('nice') + ' -n19 ' + cmd
 
         return cmd
-
-
-if __name__ == '__main__':
-    config = Config()
-    print("snapshots path = %s" % config.snapshotsFullPath())
