@@ -1673,7 +1673,9 @@ class SettingsDialog(QDialog):
             self.config.set_snapshots_path(self.editSnapshotsPath.text())
 
         snapshots_mountpoint = self.config.get_snapshots_mountpoint(
+            mode=mode,
             tmp_mount=True)
+
         ret = tools.validate_and_prepare_snapshots_path(
             path=snapshots_mountpoint,
             host_user_profile=self.config.hostUserProfile(),
